--- a/hexa.css
+++ b/hexa.css
@@ -22,6 +22,20 @@ body {
     margin-bottom: 10px;
 }
 
+.btn-run {
+    width: 50%;
+    margin-top: 1rem;
+}
+
+.btn-copy {
+    display: block;
+    background-color: #fff;
+    color: #000;
+}
+
+.page__block--text {
+    font-size: 14px;
+}
 .page__title--main {
     font-size: 24px;
 }
@@ -43,6 +57,8 @@ body {
     align-items: center;
     justify-content: center;
     transition: 1s all;
+    flex-direction: column;
+    font-size: 14px;
 }
 
 .page__btn {
