--- a/hexa.css
+++ b/hexa.css
@@ -30,18 +30,23 @@ body {
 .btn-copy {
     display: block;
     background-color: #fff;
-    color: #000;
+    color: #fff;
+    padding: 6px 14px;
+    z-index: 20;
 }
 
 .page__block--text {
-    font-size: 14px;
-    color: lightgray;
+    font-size: 16px;
+    color: #ffffff;
+    font-weight: bold;
+    margin-bottom: 1rem;
+    z-index: 10;
 }
 
 .page__title--main {
     font-size: 30px;
     font-weight: 700;
-    margin-bottom: 5px;
+    margin-bottom: 10px;
 }
 
 .page__blocks {
@@ -55,6 +60,7 @@ body {
 }
 
 .page__block-item {
+    position: relative;
     height: 150px;
     border: 1px solid lightblue;
     display: flex;
@@ -65,6 +71,16 @@ body {
     font-size: 14px;
 }
 
+.page__block-item::after {
+    content: '';
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.1);
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
 .page__btn {
     display: inline-block;
     vertical-align: center;
@@ -73,6 +89,11 @@ body {
     color: #ffffff;
     border: none;
     padding: 10px 15px;
+
+}
+
+.btn-copy {
+
 }
 
 .page__input {
