--- a/hexa.css
+++ b/hexa.css
@@ -92,16 +92,14 @@ body {
 
 }
 
-.btn-copy {
-
-}
-
 .page__input {
     display: flex;
     justify-content: space-between;
     align-items: center;
     width: 50%;
+    flex-wrap: wrap;
 }
+
 .form__group {
     width: 75%;
 }
@@ -129,4 +127,20 @@ body {
     position: absolute;
     left: -9999px;
     z-index: -1;
+}
+
+@media screen and (max-width: 1034px) {
+    .form__group {
+        margin-bottom: 5px;
+        width: 100%;
+    }
+    .btn-gen {
+        width: 100%;
+    }
+    .page__block-action {
+        width: 100%;
+    }
+    .btn-run {
+        margin-top: 5px;
+    }
 }
